<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_helper"
            android:title="@string/menu_helper"
            android:icon="@drawable/helper"/>

        <item android:id="@+id/nav_course"
            android:title="@string/menu_course"
            android:icon="@drawable/course"/>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/income"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/expense"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />

    </group>

</menu>
